--- a/style.css
+++ b/style.css
@@ -71,14 +71,56 @@ nav ul li a:hover::after{
   font-size: 26px;
 }
 .header-text h1{
-  font-size: 60px;
-  margin-top: 20px;
+  font-size: 50px;
   
 }
 .header-text h1 span{
   color: #ff18d8;
+  position: relative;
+}
+.header-text h1 span::before{
+  content: "UX/UI";
+  color: #ff18d8;
+  animation: words 20s infinite;
+}
+.header-text h1 span::after{
+  content: "";
+  position: absolute;
+  width: calc(100% + 8px);
+  height: 105%;
+  background-color: black;
+  border-left: 2px solid #ff18d8;
+  right: -8px;
+  animation: cursor .8s infinite, typing 20s steps(14) infinite;
+}
+@keyframes cursor{
+  to{
+    border-left: 2px solid #ff7f5000;
+  }
+}
+@keyframes words{
+  0%, 20%{
+    content: "Web Design";
+  }
+  21%, 40%{
+    content: "Photo Editor";
+  }
+  41%, 60%{
+    content: "Video Editor";
+  }
+  61%, 80%{
+    content: "IT Support";
+  }
 }
 
+@keyframes typing {
+  10%,15%,30%,35%,50%,55%,70%,75%,90%{
+    width: 0;
+  }
+  5%,20%,25%,40%,45%,60%,65%,80%,85%{
+    width: calc(100% + 8px);
+  }
+}
 /*-- ABOUT --*/
 
 #about{
@@ -106,6 +148,11 @@ nav ul li a:hover::after{
 
 .about-col-2 p{
   font-size: 24px;
+}
+
+.about-col-2 h4{
+  font-size: 14px;
+  margin-top: 10px;
 }
 .sub-title{
   font-size: 60px;
@@ -158,7 +205,7 @@ nav ul li a:hover::after{
 }
 /*-- SERVICES --*/
 #services{
-  padding: 30px 0;
+  padding: 100px 0;
 }
 .services-list{
   display: grid;
@@ -169,7 +216,7 @@ nav ul li a:hover::after{
 .services-list div{
   background: #262626;
   padding: 40px;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 300;
   border-radius: 10px;
   transition: background 0.5s, transform 0.5s;
@@ -183,6 +230,9 @@ nav ul li a:hover::after{
   font-weight: 500;
   margin-bottom: 15px;
 }
+.services-list p{
+  font-size: 20px;
+}
 .services-list div a{
   text-decoration: none;
   color: #fff;
@@ -192,7 +242,7 @@ nav ul li a:hover::after{
 }
 .services-list div:hover{
   background: #ff18d8;
-  transform: translateY(-30px);
+  transform: translateY(-20px);
 }
 
 /*-- PORTFOLIO --*/
@@ -278,18 +328,23 @@ nav ul li a:hover::after{
 /*-- CONTACT --*/
 .contact-left{
   flex-basis: 35%;
+  margin-left: 0px;
 }
 .contact-right{
   flex-basis: 60%;
+  margin-top: 100px;
 }
-
-.contact-left p{
+.contact-right p{
   margin-top: 30px;
 }
-.contact-left p i{
+.contact-right p i{
   color: #ff18d8;
   margin-right: 15px;
   font-size: 25px;
+}
+.contact-left img{
+  width: 250px;
+  height: 350px;
 }
 .social-icons{
   margin-top: 30px;
@@ -311,7 +366,8 @@ nav ul li a:hover::after{
   display: inline-block;
   background: #ff18d8;
 }
-.contact-right form{
+.contact-bot form{
+  margin-top: 50px;
   width: 100%;
 }
 form input, form textarea{
@@ -333,7 +389,7 @@ form .btn2{
   cursor: pointer;
 }
 .copyright{
-  width: 108%;
+  width: auto;
   text-align: center;
   padding: 30px 0;
   background: #262626;
@@ -348,7 +404,7 @@ form .btn2{
 /*-- CSS SMALL VIEW --*/
 @media only screen and (max-with: 600px){
   #header{
-    background-image: url(images/phone-background.png);
+    background-image: url(images/cp.jpg);
   }
   .header-text{
     margin-top: 100%;
@@ -359,3 +415,37 @@ form .btn2{
   }
 }
 
+/*-- FOOTER --*/
+footer {
+  background: #262626;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+  position: relative;
+  width: 100%;
+}
+
+footer .copyright {
+  font-weight: 300;
+}
+
+footer i {
+  color: #ff18d8;
+}
+
+footer .copyright {
+  margin-left: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  .header-text {
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1 {
+    font-size: 30px;
+  }
+  footer {
+    padding: 20px 10px;
+  }
+}
