--- a/style.css
+++ b/style.css
@@ -122,11 +122,13 @@ nav ul li a:hover::after{
   }
 }
 /*-- ABOUT --*/
-
 #about{
   padding: 80px 0;
   padding-left: 100px;
   color: #ababab;
+  background-image: url(images/bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .row{
   display: flex;
@@ -206,6 +208,7 @@ nav ul li a:hover::after{
 /*-- SERVICES --*/
 #services{
   padding: 100px 0;
+  margin-top: 20px;
 }
 .services-list{
   display: grid;
@@ -395,7 +398,6 @@ form .btn2{
   background: #262626;
   font-weight: 300;
   margin-top: 20px;
-  margin-left: -100px;
 }
 .copyright i{
   color: #ff18d8;
@@ -416,7 +418,26 @@ form .btn2{
 }
 
 /*-- FOOTER --*/
+footer {
+  background: #262626;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+  position: relative;
+  width: 100%;
+}
 
+footer .copyright {
+  font-weight: 300;
+}
+
+footer i {
+  color: #ff18d8;
+}
+
+footer .copyright {
+  margin-left: 0;
+}
 
 @media only screen and (max-width: 600px) {
   .header-text {
