--- a/style.css
+++ b/style.css
@@ -1,20 +1,25 @@
 *{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:  sans-serif;
   box-sizing: border-box;
 } 
+html{
+  scroll-behavior: smooth;
+}
 body{
   background-color: black;
   color: #fff;
 }
-#header{
+#header {
   width: 100%;
   height: 100vh;
   background-image: url(images/background.jpg);
-  background-size: cover;
-  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right center;
 }
+
 .me{
   position: absolute;
   right: 150px;
@@ -31,7 +36,6 @@ nav{
 }
 
 .logo{
-
   width: 100px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -46,10 +50,12 @@ nav ul li{
 nav ul li a{
   color: white;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 16px;
   position: relative;
 }
-
+nav ul li a:hover{
+  color:#ff18d8;
+}
 nav ul li a::after{
   content: '';
   width: 0%;
@@ -57,8 +63,8 @@ nav ul li a::after{
   background: #ff18d8;
   position: absolute;
   left: 0;
-  bottom: -6px;
-  transition: 0.5s;
+  bottom: -15px;
+  transition: 0.4s;
 }
 
 nav ul li a:hover::after{
@@ -67,12 +73,13 @@ nav ul li a:hover::after{
 
 .header-text{
   margin-top: 20%;
-  font-size: 30px;
   font-size: 26px;
 }
 .header-text h1{
   font-size: 50px;
-  
+}
+.header-text h2{
+  color: #ff18d8;
 }
 .header-text h1 span{
   color: #ff18d8;
@@ -150,6 +157,8 @@ nav ul li a:hover::after{
 
 .about-col-2 p{
   font-size: 24px;
+  color: #ffff;
+
 }
 
 .about-col-2 h4{
@@ -160,6 +169,7 @@ nav ul li a:hover::after{
   font-size: 60px;
   font-weight: 600;
   color: #fff;
+  text-shadow: 3px 3px#ff18d8;
 }
 
 .tab-titles{
@@ -191,6 +201,7 @@ nav ul li a:hover::after{
   list-style: none;
   margin: 10px 0;
   font-size: 24px;
+  color: #fff;
 }
 .tab-contents ul li span{
   color: #ff18d8;
@@ -249,8 +260,9 @@ nav ul li a:hover::after{
 }
 
 /*-- PORTFOLIO --*/
-#portfolio{
-  padding: 50px 0;
+.portfolio{
+  background-color:#262626;
+  padding-top: 50px;
 }
 .work-list{
   display: grid;
@@ -262,13 +274,15 @@ nav ul li a:hover::after{
   border-radius: 10px;
   position: relative;
   overflow: hidden;
-}
+  box-shadow: 0 0 20px #ff18d8;
 
+}
 .work img{
   width: 100%;
   border-radius: 10px;
   display: block;
   transition: transform 0.5s;
+  opacity: 80%;
 }
 .layer{
   width: 100%;
@@ -322,7 +336,6 @@ nav ul li a:hover::after{
   text-decoration: none;
   color: #fff;
   transition: background 0.5s;
-
 }
 .btn:hover{
   background: #ff18d8;
@@ -331,23 +344,19 @@ nav ul li a:hover::after{
 /*-- CONTACT --*/
 .contact-left{
   flex-basis: 35%;
-  margin-left: 0px;
+  margin-top: 50px;
 }
 .contact-right{
   flex-basis: 60%;
-  margin-top: 100px;
+  /* margin-top: 100px; */
 }
-.contact-right p{
+.contact-left p{
   margin-top: 30px;
 }
-.contact-right p i{
+.contact-left p i{
   color: #ff18d8;
   margin-right: 15px;
   font-size: 25px;
-}
-.contact-left img{
-  width: 250px;
-  height: 350px;
 }
 .social-icons{
   margin-top: 30px;
@@ -369,7 +378,7 @@ nav ul li a:hover::after{
   display: inline-block;
   background: #ff18d8;
 }
-.contact-bot form{
+.contact-right form{
   margin-top: 50px;
   width: 100%;
 }
@@ -392,9 +401,9 @@ form .btn2{
   cursor: pointer;
 }
 .copyright{
-  width: auto;
+  width: 100%;
   text-align: center;
-  padding: 30px 0;
+  padding: 25px 0;
   background: #262626;
   font-weight: 300;
   margin-top: 20px;
@@ -402,21 +411,6 @@ form .btn2{
 .copyright i{
   color: #ff18d8;
 }
-
-/*-- CSS SMALL VIEW --*/
-@media only screen and (max-with: 600px){
-  #header{
-    background-image: url(images/cp.jpg);
-  }
-  .header-text{
-    margin-top: 100%;
-    font-size: 16px;
-  }
-  .header-text h1{
-    font-size: 30px;
-  }
-}
-
 /*-- FOOTER --*/
 footer {
   background: #262626;
@@ -438,16 +432,70 @@ footer i {
 footer .copyright {
   margin-left: 0;
 }
+/*-- CSS SMALL VIEW --*/
+nav .fas{
+  display: none;
+}
+nav .fas{
+  display: none;
+}
 
-@media only screen and (max-width: 600px) {
-  .header-text {
+@media only screen and (max-width: 600px){
+  #header{
+    background-image: url(images/phone-background.png);
+  }
+  .header-text{
     margin-top: 100%;
     font-size: 16px;
   }
-  .header-text h1 {
+  .header-text h1{
     font-size: 30px;
   }
-  footer {
-    padding: 20px 10px;
+  nav .fas{
+    display: block;
+    font-size: 25px;
+  }
+  nav ul{
+    background: #ff004f;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s;
+  }
+  nav ul li{
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fas{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+  .sub-title{
+    font-size: 40px;
+  }
+  .about-col-1, .about-col-2{
+    flex-basis: 100%;
+  }
+  .about-col-1{
+    margin-bottom: 30px;
+  }
+  .about-col-2{
+    font-size: 14px;
+  }
+  .tab-links{
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .contact-left, .contact-right{
+    flex-basis: 100%;
+  }
+  .copyright{
+    font-size: 14px;
   }
 }
