--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   font-family:  sans-serif;
   box-sizing: border-box;
 } 
+html{
+  scroll-behavior: smooth;
+}
 body{
   background-color: black;
   color: #fff;
@@ -176,7 +179,7 @@ nav ul li a:hover::after{
 }
 .tab-links{
   margin-right: 50px;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 500;
   cursor: pointer;
   position: relative;
@@ -434,9 +437,6 @@ footer .copyright {
 nav .fas{
   display: none;
 }
-nav .fas{
-  display: none;
-}
 
 @media only screen and (max-width: 600px){
   #header{
@@ -496,4 +496,9 @@ nav .fas{
   .copyright{
     font-size: 14px;
   }
+}
+#msg{
+  color: #61b752;
+  margin-top: -40px;
+  display: block;
 }
